@@ -1,3 +1,9 @@
+2012-05-02  Jakub Jelinek  <jakub@redhat.com>
+
+	PR rtl-optimization/53160
+	* ree.c (combine_reaching_defs): Handle the case where cand->insn
+	has been modified by ree pass already.
+
 2012-05-01  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline
